@@ -1,3 +1,4 @@
+1-7-09: #1058, change default tab colors, change default canvas background
 # 0.13.01 (27013) 01-05-2009
 testing deploy process
 # 0.13.00 (26984) 01-05-2009
